# LunaLink-Project-X

./: .gitignore  DEPLOY.md  LunaLink_AllSubsystems_Professional_Plan.md  LunaLink_Engineering_Grade_Integrated_Architecture.md  LunaLink_Final_10_10_Execution_Plan.md  README.md  README.txt  pyproject.toml  run.bat  run.sh  streamlit_app.py
assets/: README.md  lunalink_spacecraft_model.stl  visual_asset_manifest.json
assets/textures/: CREDITS.md
code/: build_visual_assets.py  main_gui.py  main_simulation.py  requirements.txt  viz3d.py
code/.streamlit/: config.toml
code/components/: __init__.py  fullscreen.py  spacecraft3d.py  spacecraft_explorer.html
code/external_validation/: README.md  export_tool_truth.py  spice_orekit_crosscheck.py
code/lunalink/: __init__.py  adcs.py  comms_atmosphere.py  config.py  constants.py  environment.py  eps.py  exporters.py  frames.py  io.py  magnetic_field.py  orbit.py  orbit_analysis.py  plotting.py  radiation.py  reporting.py  ttc.py  (+4 more)
qualification/: assumptions_register.csv  certification_readiness_matrix.md  configuration_index.json  dashboard_smoke_test.md  expanded_reference_review.md  formula_register.md  independent_review_checklist.md  interface_control_document.md  model_limitations.md  model_validation_report.md  nonconformance_log.csv  reference_matrix.md  release_readiness_checklist.md  requirements_baseline.md  risk_register.csv  tailoring_matrix.md  validation_crosscheck_plan.md  verification_control_document.md
report/: LunaLink_Baseline_Report.md  LunaLink_Report_Draft.md  build_pdf_report.py  build_report.py
(+51 files in other folders)
